2.25.1 2023-12-07
~~~~~~~~~~~~~~~~~

* Fixed issue where 0-dimensional arrays were not allowed in codadef files.

2.25 2023-09-12
~~~~~~~~~~~~~~~

* Migrated from PCRE to PCRE2. The embedded PCRE2 library is now version 10.42.

* Updated embedded expat library to version 2.5.0.

* Updated embedded zlib library to version 1.3.

* Fixed issue where jpeg dll was missing from windows binary installer.

2.24.2 2023-02-06
~~~~~~~~~~~~~~~~~

* Reverted Python interface optimisation introduced in 2.24 since a fetch no
  longer allowed a sub path to be provided as a single string parameter.

2.24.1 2022-12-07
~~~~~~~~~~~~~~~~~

* Fixed printing of coda.Record objects in Python interface (missing
  end-of-line and support for 0-dimensional arrays).

2.24 2022-05-18
~~~~~~~~~~~~~~~

* Added significant speed improvements for recursive reads in Python interface.

2.23.1 2022-02-18
~~~~~~~~~~~~~~~~~

* Improved performance in Python interface for some use cases.

* Fixed backward compatibility issue with new Python interface (coda.CodaError
  has been reintroduced as an alias for the new coda.Error exception class).

2.23 2021-12-17
~~~~~~~~~~~~~~~

* Fixed issue with reading compressed variables from CDF where variable would
  also contain VVR records besides CVVR records.

* Added constituentType for GRIB2 data with productDefinitionTemplate 40 and
  fixed reading of these grib messages.

2.22.2 2021-10-20
~~~~~~~~~~~~~~~~~

* Fixed backward compatibility issues in Python interface: fixed reading of
  strings and characters; RecordType.__getattr__() now raises AttributeError
  if attribute does not exist; fixed potential ingestion problems linked to
  empty arrays and/or unavailable record fields.

* Improved CMake build system.

2.22.1 2021-06-07
~~~~~~~~~~~~~~~~~

* Fixed memory issue in HDF4 backend when data would have a non-default
  scale_factor, add_offset, or _FillValue attribute.

* Fixed backward compatibility issues in the new Python interface