@@ -1,3 +1,6 @@
+* Fixed issue where if a field containing an array of XML elements was optional,
+  it was not set as unavailable when the array length was 0.
+
 2.25.1 2023-12-07
 ~~~~~~~~~~~~~~~~~
 
